--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -18,6 +18,7 @@ height:60vh;
     color: #f9f9f9;
     position: absolute;
     top: 10;
+    
 }
 .about_h1 {
  display: flex;
@@ -99,6 +100,7 @@ height:60vh;
 
     .about-text h1 {
         font-size: 2.2rem;
+        z-index: -999;
     }
 
     .about-text p {
