--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -2,7 +2,7 @@
 
 .container {
   width: 100%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   position: relative;
 }
 
@@ -150,7 +150,8 @@
   }
 
   .menu {
-    font-size: 0.9rem;
+    font-size: 0.9;
+   
   }
 
   .menu a {
@@ -176,11 +177,13 @@
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     display: none;
+    /* z-index: 999; */
   }
 
   .menu.show {
     display: flex;
     transform: translateX(0);
+    z-index: 999;
   }
 
   .menu li {
