--- a/src/components/css/career.css
+++ b/src/components/css/career.css
@@ -1,13 +1,13 @@
  /* Main Career section container */
 .career {
-    background-color: rgb(7, 153, 250);
+    /* background-color: rgb(7, 153, 250); */
     padding: 60px;
     border-radius: 5px;
    }
   
   /* Heading styles */
   .career p {
-    color: rgb(243, 243, 243);
+    /* color: rgb(243, 243, 243); */
     font-size: 1rem;
      line-height: 1.3;
     max-width: 1200px;
